# chgksuite

./: .gitattributes  .gitignore  .gitlab-ci.yml  HISTORY.md  LICENSE.md  README.md  author_counter.py  history.md  pyproject.toml  release-links.py
.claude/commands/: release.md
.github/workflows/: build.yml
chgksuite/: _html2md.py  cli.py  common.py  history.md  parser.py  parser_db.py  pyproject.toml  trello.py  typotools.py
chgksuite/chgksuite/: _html2md.py  board.py  board_config.py  boards.py  cli.py  common.py  github.py  parser.py  parser_db.py  parsing_engine.py  si_parser.py  trello.py  typotools.py  version.py  xy_crypto.py
chgksuite/composer/: __init__.py  markdown.py  openquiz.py  telegram.py
chgksuite/docs/: mkdocs.yml
chgksuite/handouter/: runner.py  tex_internals.py  utils.py
chgksuite/tests/: 01 SI studchr 2026_Otbor.docx.encrypted  01 SI studchr 2026_Otbor.docx.encrypted.canon  14 SI studchr 2026_GF.docx.encrypted  14 SI studchr 2026_GF.docx.encrypted.canon  2019-07-23_beln19_u.docx.canon  7. ЭК СЧР 2026. Весь пакет.docx.encrypted  7. ЭК СЧР 2026. Весь пакет.docx.encrypted.canon  Kubok_knyagini_Olgi-2015.docx.canon  Shkolny_Chemp_Estonii-2014_(48v).docx.canon  balt09-1.txt.canon  bkd_2021_all.txt  bkd_2021_all.txt.canon  borromeo.txt.canon  canonize.py  chgksuite_test.py  conftest.py  encrypt_test_files.py  settings.json  (+30 more)
scripts/: embed_noto_into_docx_template.py  generate_screenshots.py  noto_keep_unicodes.txt  rename_4s_images.py  subset_noto_fonts.py
tests/: Kubok_knyagini_Olgi-2015.docx.canon  chgksuite_test.py  encrypt_test_files.py
(+51 files in other folders)
