[project]
name = "chgksuite-mono"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "chgksuite",
    "chgksuite-qt",
    "chgksuite-tk",
]

[tool.uv.sources]
chgksuite = { path = "chgksuite", editable = true }
chgksuite-qt = { path = "chgksuite_qt", editable = true }
chgksuite-tk = { path = "chgksuite_tk", editable = true }

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pytest>=8.4.2",
    "ruff>=0.14.10",
]
